# certification_django

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
certification/: settings.py  urls.py
suppliers_network/: admin.py  apps.py  filters.py  models.py  permissions.py  setializers.py  views.py
suppliers_network/migrations/: 0001_initial.py  0002_alter_product_release_date.py  0003_alter_networkobject_supplier.py  0004_alter_networkobject_options_and_more.py
